--- a/config/glove80.conf
+++ b/config/glove80.conf
@@ -1,1 +1,7 @@
+# Use non-legacy LLCP (required for compatibility with recent Linux kernel)
+CONFIG_BT_LL_SW_LLCP=n
+CONFIG_BT_LL_SW_LLCP_LEGACY=y
 
+# Disable 2M PHY (required for compatibility with recent Intel chipset drivers
+# on Windows)
+CONFIG_BT_CTLR_PHY_2M=y
